# MiniWorldGame

./: .gitignore  CMakeLists.txt  architecture.md
assets/character/human/: config.toml
assets/tile/grass/: config.toml
assets/tile/mountain/: config.toml
include/: Animation.h  Constant.h  Core.h  Object.h
src/: Animation.cpp  CMakeLists.txt  Constant.cpp  Core.cpp  Object.cpp  main.cpp
src/engine/: CMakeLists.txt
src/engine/core/: CMakeLists.txt
src/engine/core/WindowManager/: CMakeLists.txt  WindowManager.cpp  WindowManager.h
src/modules/: CMakeLists.txt
src/modules/Animation/: Animation.cpp  CMakeLists.txt
src/modules/Movement/: CMakeLists.txt  Movement.cpp  Movement.h
src/modules/Object/: CMakeLists.txt  Object.cpp  Object.h
src/utils/: CMakeLists.txt
